--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header nav {
 a {
   padding-right: 10px;
   padding-left: 10px;
-  background-color: brown;
+  background-color: grey;
 }
 
 /*Our image caption...*/
