--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ section figure figcaption {
 /*Update the text block */
 section#featured-property {
   text-align: center;
+  font-size:30;
   background-color: grey;
 }
 #featured-property p {
