Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ section figure figcaption {
   text-align: center;
   font-size: 12px
 }
+<section id="featured-property">
 
 /*Update the text block */
 section#featured-property {
