--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ section#featured-property {
 p#featured-property {
   max-width: 800px;
   text-align: center;
+  display: block;
+  margin: 0 auto;
 }
 
 /*Make our details section horizontal */
