--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ section figure figcaption {
 
 /*Update the text block */
 section#featured-property {
-  text-align: center;
+  display: block;
+  margin: 0 auto;
   background-color: red;
   max-width: 900px;
 }
