--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ p#featured-property {
   max-width: 800px;
   display: block;
   margin: 0 auto;
+  text-align: center;
 }
 
 /*Make our details section horizontal */
