--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ section#featured-property {
   max-width: 900px;
   text-align: center;
 }
-p#featured-property {
+section#featured-property p {
   max-width: 800px;
   display: block;
   margin: 0 auto;
