--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a {
 }
 
 /*Our image caption...*/
-section figure figcaption {
+section#featured-property figure figcaption {
   text-align: center;
   font-size: 12px
 }
