--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ header h1 {
   text-align: center;
 }
 
+section#featured-property{
+  text-align: center;
+  max-width: 900px;
+}
+
 img {
   display: block;
   margin: 0 auto;
